
                     ngIRCd - Next Generation IRC Server
                           http://ngircd.barton.de/

               (c)2001-2024 Alexander Barton and Contributors.
               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --

ngIRCd 27

  - The server "Name" in the "[Global]" section of the configuration file no
    longer needs to be set: When not set (or empty), ngIRCd now tries to
    deduce a valid IRC server name from the local host name ("node name"),
    possibly adding a ".host" extension when the host name does not contain a
    dot (".") which is required in an IRC server name ("ID").
    This new behaviour, with all configuration parameters now being optional,
    allows running ngIRCd without any configuration file at all.
  - autogen.sh: Prefer automake 1.11 over other releases because this is the
    last release supporting "de-ANSI-fication" using the included ansi2knr tool.
    And because we _want_ to support old K&R platforms, we try hard to use this
    release of automake when available to generate our build system.
    Note: This is only relevant for you if you are building from Git sources.
  - Autodetect support for IPv6 by default: Until now, IPv6 support was disabled
    by default, which seems a bit outdated in 2024. Note: You still can pass
    "--enable-ipv6"/"--disable-ipv6" to the ./configure script to forcefully
    activate or deactivate IPv6 support.
  - Update config.guess and config.sub to recent versions
  - Remove the unmaintained contrib/MacOSX/ folder: this includes the Xcode
    project as well as the outdated macOS "Package Maker" configuration. The
    sample launchd(8) configuration properties list file was moved to
    "contrib/de.barton.ngircd.plist" and kept.
  - Fix Channel Admins being able to to set Channel Owner status! "Sarah"